--- a/list메소드학습용(self study).ipynb
+++ b/list메소드학습용(self study).ipynb
@@ -991,11 +991,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function remove:\n",
+      "\n",
+      "remove(value, /) method of builtins.list instance\n",
+      "    Remove first occurrence of value.\n",
+      "    \n",
+      "    Raises ValueError if the value is not present.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "    help([].remove)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['orange', 'yellow', 'green', 'yellow', 'red']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#9. remove\n",
+    "colors=['red','orange', 'yellow','green', 'yellow','red']\n",
+    "\n",
+    "colors.remove('red') # 지울 요소가 두개면 어떤 요소를 지우는가?\n",
+    "print(colors)\n",
+    "# colors.remove('black') # black이라는 요소는 없음. 없는걸 지우면 오류\n"
    ]
   },
   {
@@ -1055,7 +1091,30 @@
     "* The reverse() method reverses the elements of the list.\n",
     "\n",
     "\n",
-    ">The reverse() method doesn't return any value. It updates the existing list.\n"
+    ">The reverse() method doesn't return any value. It updates the existing list.\n",
+    "\n",
+    "reverse는 원본에 영향을 주지 않는다. 메소드 reverse 를 썼다고 해서 원본이 reversed가 되는 것이 아님"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function reverse:\n",
+      "\n",
+      "reverse() method of builtins.list instance\n",
+      "    Reverse *IN PLACE*.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "        help([].reverse)"
    ]
   },
   {
@@ -1064,7 +1123,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "        help([].reverse)"
+    "#10. reverse\n",
+    "colors=['red','ornage', 'yellow','green', 'yellow','red']\n",
+    "\n",
+    "colors.reverse()\n",
+    "print(colors)\n",
+    "\n",
+    "# 슬라이싱을 이용한 reverse\n",
+    "print(colors[::-1])\n",
+    "print(colors)"
    ]
   },
   {
@@ -1138,11 +1205,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function sort:\n",
+      "\n",
+      "sort(*, key=None, reverse=False) method of builtins.list instance\n",
+      "    Sort the list in ascending order and return None.\n",
+      "    \n",
+      "    The sort is in-place (i.e. the list itself is modified) and stable (i.e. the\n",
+      "    order of two equal elements is maintained).\n",
+      "    \n",
+      "    If a key function is given, apply it once to each list item and sort them,\n",
+      "    ascending or descending, according to their function values.\n",
+      "    \n",
+      "    The reverse flag can be set to sort in descending order.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help([].sort)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "help([].sort)"
+    "#11. sort\n",
+    "colors=['red','ornage', 'yellow','green', 'yellow','red']\n",
+    "\n",
+    "colors.sort()\n",
+    "print(colors)\n",
+    "\n",
+    "colors.sort(reverse=True)\n",
+    "print(colors)\n",
+    "# sort는 내림차순default / reverse=True는 오름차순'\n",
+    "# 차수가 다른 것보다 낮음\n"
    ]
   },
   {
@@ -1197,6 +1302,156 @@
     "\n",
     "# print list\n",
     "print('Sorted list:', random)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "리스트명.copy()\n",
+    "shallow copy(얕은 복사)가 일어난다.\n",
+    "주소복사, shallow copy, deep copy 를 비교해서 알아두자.\n",
+    "\n",
+    "코드와 object의 변화를 실시간으로 살펴보기 http://pythontutor.com/live.html#mode=edit\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=[1,2]\n",
+    "b=a #주소복사 / a가 링크하고 있는것을 b가 링크한다. -> a or b 바뀌면 둘다 바뀐다.\n",
+    "\n",
+    "a.append(3)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=[1,2,[3,4]]\n",
+    "b=a\n",
+    "\n",
+    "a.append(5)\n",
+    "b[2].append(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 주소 복사 #1\n",
+    "\n",
+    "a=[1,2]            # 단순 리스트\n",
+    "b=a                # 주소복사, 사실상 a, b는 동일한 객체\n",
+    "# print(f'before: a={a},b={b}, id 동일여부:{id(a)==id(b)}') \n",
+    "print(f'b=a 결과 : a={a},b={b}')\n",
+    "a.append(4)\n",
+    "print(f'a.append(4) 결과 : a={a},b={b}')\n",
+    "\n",
+    "b.append(3)\n",
+    "print(f'b.append(3) 결과 : a={a},b={b}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#주소복사#2\n",
+    "\n",
+    "a=[1,2,[3,4]]      # nested list\n",
+    "b=a\n",
+    "# print(f'before: a={a},b={b}, a,b의 id 동일여부:{id(a)==id(b)}, a[2],b[2]의 id 동일 여부:{id(a[2])==id(b[2])}') \n",
+    "print(f'b=a 결과 : a={a},b={b}')\n",
+    "a.append(7)     #a에 변화를 주면 b가 같이 바뀐다.\n",
+    "print(f'a.append(7) 결과 : a={a},b={b}')\n",
+    "\n",
+    "b[2].append(8)  #b에 변화를 주면 a가 같이 바뀐다. / 슬라이싱으로 새로운 함수\n",
+    "print(f'b[2].append(8) 결과 : a={a},b={b}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=[1,2]\n",
+    "b=a.copy()\n",
+    "c=a # b가 변했음에도 불구하고 a에는 영향을 주지 않는다. \n",
+    "#단순 리스트일 때 shallow copy하면 새로 만들어진다. \n",
+    "#얕은 것만 복제가 따로 된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shallow copy(얕은 복사) #1 단순리스트\n",
+    "\n",
+    "a=[1,2]            # 단순 리스트\n",
+    "b=a.copy()     # 주소복사와는 다른 shallow copy, a[:]를 써도 된다.\n",
+    "# b=a[:]       # shallow copy\n",
+    "# b=list(a)    # shallow copy. \n",
+    "'''\n",
+    "b=a\n",
+    "c=a.copy() 로 실시간 object를 확인해보면서 \n",
+    "주소복사와  shallow copy의 차이점을 확실히 파악해보자\n",
+    "'''\n",
+    "# print(f'before: a={a},b={b}, id 동일여부:{id(a)==id(b)}') \n",
+    "print(f'b=a.copy() 결과 : a={a},b={b}')\n",
+    "a.append(4)\n",
+    "print(f'a.append(4) 결과 : a={a},b={b}')\n",
+    "\n",
+    "b.append(3)\n",
+    "print(f'b.append(3) 결과 : a={a},b={b}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shallow copy의 여러가지 방법\n",
+    "''' \n",
+    "b=a.copy() # 방법1\n",
+    "b=a[:]   # 방법2\n",
+    "b=list(a) # 방법3, 잘 안쓰는 방법\n",
+    "\n",
+    "import copy  # copy 모듈 사용\n",
+    "b=copy.copy(a) # 방법4 앞의 copy는 모듈, 뒤의 copy는 함수          \n",
+    " 1,3,4 는 자주 사용하지만 3은 자주 사용하지 않음\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy 모듈 사용\n",
+    "a=[1,2,[3,4]]\n",
+    "\n",
+    "b=a.copy()\n",
+    "c=a[:]\n",
+    "d=list(a)\n",
+    "\n",
+    "import copy\n",
+    "e=copy.copy(a)"
    ]
   }
  ],
