--- a/Ch02_친해지기#3(list,tuple)_학생용.ipynb
+++ b/Ch02_친해지기#3(list,tuple)_학생용.ipynb
@@ -649,8 +649,11 @@
    "name": "Ch01_파이썬 맛보기.ipynb",
    "provenance": []
   },
+  "interpreter": {
+   "hash": "4f946df053fbf2b937619d3c5458e7af74262f9a954d8797ba0b27400bcafe06"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 64-bit",
    "language": "python",
    "name": "python3"
   },
