--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -997,8 +997,11 @@
    "name": "Ch01_맛보기.ipynb",
    "provenance": []
   },
+  "interpreter": {
+   "hash": "4f946df053fbf2b937619d3c5458e7af74262f9a954d8797ba0b27400bcafe06"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.12 64-bit",
    "language": "python",
    "name": "python3"
   },
