--- a/copy 모듈.ipynb
+++ b/copy 모듈.ipynb
@@ -368,11 +368,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "opmVt0vm-nO0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b=copy.deepcopy(a) 결과: a=[1, 2],b=[1, 2]\n",
+      "a.append(4) 결과 : a=[1, 2, 4],b=[1, 2]\n",
+      "b.append(3) 결과 : a=[1, 2, 4],b=[1, 2, 3]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# copy모듈의 copy()를 이용한 deep copy(깊은 복사) #1 단순 리스트\n",
     "\n",
