--- a/Ch02_친해지기#3(list,tuple)_학생용(copy 추가).ipynb
+++ b/Ch02_친해지기#3(list,tuple)_학생용(copy 추가).ipynb
@@ -705,7 +705,25 @@
    "source": [
     "# method호출결과 return의 유무를 아는것이 왜 중요한가?\n",
     "# 실행전에 짐작부터 하기\n",
+    "\n",
+    "data=[1,2]\n",
+    "new_data=data.append(7)  #어떤 의도일까? new_data는 뭘까?\n",
+    "print(data) #data\n",
+    "print(new_data)\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=[1,2,3]\n",
+    "\n",
+    "print(data.clear()) # 결과가 무엇일까? 왜 그런 결과일까?\n",
+    "print(data)\n"
    ]
   },
   {
@@ -716,7 +734,12 @@
    "source": [
     "# d1, d2, d3는 각각 무엇일까?\n",
     "\n",
-    "\n"
+    "d1=[1,2]\n",
+    "d2=[3,[4,5]]\n",
+    "d3=d1.extend(d2)\n",
+    "print(d1)\n",
+    "print(d2)\n",
+    "print(d3)\n"
    ]
   },
   {
@@ -729,7 +752,11 @@
    "source": [
     "# data, r_data는 각각 무엇일까?\n",
     "\n",
-    "\n"
+    "data=[1,2,3,3,5,4,3]\n",
+    "r_data=data.remove(3)\n",
+    "\n",
+    "print(data)\n",
+    "print(r_data)"
    ]
   },
   {
@@ -741,7 +768,8 @@
    "outputs": [],
    "source": [
     "# data, r_data는 각각 무엇일까?\n",
-    "\n",
+    "data=[1,2,3]\n",
+    "r_data=data.reverse()\n",
     "\n"
    ]
   },
