--- a/Ch02_친해지기#3(list,tuple)_학생용(copy 추가).ipynb
+++ b/Ch02_친해지기#3(list,tuple)_학생용(copy 추가).ipynb
@@ -397,11 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "7kd29B3e-nO1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'copy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/workspaces/hafs_portfolio/Ch02_친해지기#3(list,tuple)_학생용(copy 추가).ipynb Cell 34'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Ballojys-hafs-portfolio-5w9w9w6p375rw/workspaces/hafs_portfolio/Ch02_%EC%B9%9C%ED%95%B4%EC%A7%80%EA%B8%B0%233%28list%2Ctuple%29_%ED%95%99%EC%83%9D%EC%9A%A9%28copy%20%EC%B6%94%EA%B0%80%29.ipynb#ch0000033vscode-remote?line=0'>1</a>\u001b[0m \u001b[39m# copy모듈의 copy()를 이용한 deep copy(깊은 복사) #2 nested list\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Ballojys-hafs-portfolio-5w9w9w6p375rw/workspaces/hafs_portfolio/Ch02_%EC%B9%9C%ED%95%B4%EC%A7%80%EA%B8%B0%233%28list%2Ctuple%29_%ED%95%99%EC%83%9D%EC%9A%A9%28copy%20%EC%B6%94%EA%B0%80%29.ipynb#ch0000033vscode-remote?line=2'>3</a>\u001b[0m a\u001b[39m=\u001b[39m[\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,[\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m]]      \u001b[39m# 리스트안에 iterable 객체가 있는 경우\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Ballojys-hafs-portfolio-5w9w9w6p375rw/workspaces/hafs_portfolio/Ch02_%EC%B9%9C%ED%95%B4%EC%A7%80%EA%B8%B0%233%28list%2Ctuple%29_%ED%95%99%EC%83%9D%EC%9A%A9%28copy%20%EC%B6%94%EA%B0%80%29.ipynb#ch0000033vscode-remote?line=3'>4</a>\u001b[0m b\u001b[39m=\u001b[39mcopy\u001b[39m.\u001b[39mdeepcopy(a)             \n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Ballojys-hafs-portfolio-5w9w9w6p375rw/workspaces/hafs_portfolio/Ch02_%EC%B9%9C%ED%95%B4%EC%A7%80%EA%B8%B0%233%28list%2Ctuple%29_%ED%95%99%EC%83%9D%EC%9A%A9%28copy%20%EC%B6%94%EA%B0%80%29.ipynb#ch0000033vscode-remote?line=4'>5</a>\u001b[0m \u001b[39m# print(f'before: a={a},b={b}, a,b의 id 동일여부:{id(a)==id(b)}, a[2],b[2]의 id 동일 여부:{id(a[2])==id(b[2])}') \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Ballojys-hafs-portfolio-5w9w9w6p375rw/workspaces/hafs_portfolio/Ch02_%EC%B9%9C%ED%95%B4%EC%A7%80%EA%B8%B0%233%28list%2Ctuple%29_%ED%95%99%EC%83%9D%EC%9A%A9%28copy%20%EC%B6%94%EA%B0%80%29.ipynb#ch0000033vscode-remote?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mb=copy.deepcopy(a) 결과 : a=\u001b[39m\u001b[39m{\u001b[39;00ma\u001b[39m}\u001b[39;00m\u001b[39m,b=\u001b[39m\u001b[39m{\u001b[39;00mb\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'copy' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# copy모듈의 copy()를 이용한 deep copy(깊은 복사) #2 nested list\n",
     "\n",
@@ -793,7 +805,113 @@
     "* # 튜플 사용하기\n",
     "\n",
     "튜플은 리스트와 같지만 튜플은 항목을 변경할 수 없다.  \n",
-    "변경가능성이 전혀 없는 자료를 묶을 때는 리스트보다 튜플이 더 나은 선택"
+    "변경가능성이 전혀 없는 자료를 묶을 때는 리스트보다 튜플이 더 나은 선택\n",
+    "\n",
+    "리스트는 [], 튜플은() / 리스트는 mutable, 튜플은 immutable\n",
+    "\n",
+    "리스트와 튜플은 자료형 9개를 모두 담을 수 있다. (즉 파이썬의 모든 data type 담을 수 있음)\n",
+    "\n",
+    "튜플은 자료형을 업데이트 안하겠다는 의지(!), 자료형 수정 안되니까\n",
+    "\n",
+    "튜플은 count, index 메소드만 있다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class tuple in module builtins:\n",
+      "\n",
+      "class tuple(object)\n",
+      " |  tuple(iterable=(), /)\n",
+      " |  \n",
+      " |  Built-in immutable sequence.\n",
+      " |  \n",
+      " |  If no argument is given, the constructor returns an empty tuple.\n",
+      " |  If iterable is specified the tuple is initialized from iterable's items.\n",
+      " |  \n",
+      " |  If the argument is a tuple, the return value is the same object.\n",
+      " |  \n",
+      " |  Built-in subclasses:\n",
+      " |      asyncgen_hooks\n",
+      " |      UnraisableHookArgs\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __add__(self, value, /)\n",
+      " |      Return self+value.\n",
+      " |  \n",
+      " |  __contains__(self, key, /)\n",
+      " |      Return key in self.\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getitem__(self, key, /)\n",
+      " |      Return self[key].\n",
+      " |  \n",
+      " |  __getnewargs__(self, /)\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __hash__(self, /)\n",
+      " |      Return hash(self).\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __mul__(self, value, /)\n",
+      " |      Return self*value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __rmul__(self, value, /)\n",
+      " |      Return value*self.\n",
+      " |  \n",
+      " |  count(self, value, /)\n",
+      " |      Return number of occurrences of value.\n",
+      " |  \n",
+      " |  index(self, value, start=0, stop=9223372036854775807, /)\n",
+      " |      Return first index of value.\n",
+      " |      \n",
+      " |      Raises ValueError if the value is not present.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(tuple)"
    ]
   },
   {
@@ -805,6 +923,28 @@
    "outputs": [],
    "source": [
     "#예제 코드\n",
+    "myTuple=()\n",
+    "myTuple=(1,2,3)\n",
+    "myTuple=(1, \"hafs\", 3.14)\n",
+    "myTuple=('hafs', (1,2,3), [4,5,6])\n",
+    "\n",
+    "myTuple=1,2,'hafs' #packing : 값을 튜플로 묶음\n",
+    "print(myTuple)\n",
+    "\n",
+    "a,b,c=myTuple #unpacking : 1대1 대응이 되어야 함.  / 변수의 갯수와 값의 갯수가 같아야함. 같지 않을시 unpacking 안됨 -> 에러\n",
+    "print(a,b,c)\n",
+    "\n",
+    "# 튜플 선언시 유의점\n",
+    "data=(1)                    #멤버가 한개인 튜플을 만들기 위해서는 콤마를 사용해야함.\n",
+    "print(data, type(data))\n",
+    "\n",
+    "data=(1,)                      # 다음과 같이 콤마를 사용해야 튜플로 선언됨\n",
+    "print(data, type(data))\n",
+    "\n",
+    "#튜플은 항목을 변경할 수 없다\n",
+    "#'tuple' object does not support item assignment\n",
+    "data=(1,2,3)\n",
+    "data[0]=5\n",
     "\n",
     "\n"
    ]
@@ -818,12 +958,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code\n"
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  //  hafs  //  3.14\n",
+      "tuple\n",
+      "u\n",
+      "(4, 5, 6, 7)\n",
+      "7\n",
+      "('y', 't')\n",
+      "('p', 'y', 't', 'h')\n",
+      "('n', 't')\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -833,18 +986,42 @@
    "source": [
     "* # 튜플의 인덱싱과 슬라이싱\n",
     "\n",
-    "문자, 리스트에서의 인덱싱과 슬라이싱과 규칙이 동일"
+    "문자(string), 리스트에서의 인덱싱과 슬라이싱과 규칙이 동일"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "0IVHcVq8M1zx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, [7, 4, 5])\n",
+      "('h', 'a', 'f', 's')\n"
+     ]
+    }
+   ],
    "source": [
     "#예제 코드\n",
+    "myTuple=(1, \"hafs\", 3.14)\n",
+    "print(myTuple[0], myTuple[1], myTuple[-1], sep=\"  //  \")\n",
+    "\n",
+    "#indexing\n",
+    "myTuple=('tuple', [1,2,3], (4,5,6,7))\n",
+    "print(myTuple[0])\n",
+    "print(myTuple[0][1])\n",
+    "print(myTuple[-1])\n",
+    "print(myTuple[-1][-1])\n",
+    "\n",
+    "#slicing\n",
+    "myTuple=tuple('python')\n",
+    "print(myTuple[1:3])\n",
+    "print(myTuple[:-2])\n",
+    "print(myTuple[::-3])\n",
     "\n",
     "\n"
    ]
@@ -883,6 +1060,15 @@
    "outputs": [],
    "source": [
     "#예제 코드\n",
+    "data=(1,2,[3,4,5])\n",
+    "# data[0]=100 # 오류 발생\n",
+    "\n",
+    "data[-1][0] = 7 #변경가능\n",
+    "print(data)\n",
+    "\n",
+    "# data를 새로운 튜플로 만들 수 는 있음. / 스트링은 잘못 만들었을 때 redifine 해야하고, 튜플도 마찬가지\n",
+    "data=('h','a','f','s')\n",
+    "print(data)\n",
     "\n",
     "\n"
    ]
@@ -909,18 +1095,56 @@
     "id": "IGVQ0OOZQqd7"
    },
    "source": [
-    "* # 튜플의 연산과 관련 메소드"
+    "* # 튜플의 연산과 관련 메소드\n",
+    "* 리스트, 스트링처럼 곱하기 했을 때는 원소 반복적, 더했을 때 extend 된다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "0IVHcVq8M1zx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t3= (1, 2, 3, 4, 5, 6)\n",
+      "t4= (4, 5, 6, 4, 5, 6, 4, 5, 6)\n",
+      "(4, 5, 6, 4, 5, 6, 4, 5, 6)\n",
+      "True\n",
+      "False\n",
+      "1\n",
+      "1\n",
+      "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'count', 'index']\n"
+     ]
+    }
+   ],
    "source": [
     "#예제 코드\n",
+    "t1=(1,2,3)\n",
+    "t2=(4,5,6)\n",
+    "\n",
+    "t3=t1+t2\n",
+    "print('t3=',t3)\n",
+    "\n",
+    "t4=t2*3\n",
+    "print('t4=',t4)\n",
+    "\n",
+    "# 튜플 지우기\n",
+    "del t4\n",
+    "print(t4)   #name 't4' is not defined\n",
+    "\n",
+    "# tuple membership test, 스트링,리스트에서도 똑 같이 적용가능\n",
+    "print( 1 in t1)         # 원소가 있으면 True, 없으면 False\n",
+    "print( 1 not in t1)     #  원소가 없으면 True, 있으면 False\n",
+    "\n",
+    "# method of tuple, 2개 밖에 없다\n",
+    "print(t1.count(1))\n",
+    "print(t2.index(5))\n",
+    "\n",
+    "print(dir(tuple))\n",
     "\n",
     "\n"
    ]
@@ -952,13 +1176,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "0IVHcVq8M1zx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 // 3\n",
+      "89.3 // 9\n",
+      "3.14 // 4\n",
+      "115.63999999999999 // 18\n",
+      "[3.14, 5.6, 7.9, 9.7, 89.3] // [4, 5, 9]\n",
+      "(9.7, 3.14, 5.6, 7.9, 89.3) [5, 4, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "#예제 코드\n",
+    "t_float=(9.7, 3.14, 5.6, 7.9, 89.3)\n",
+    "l_int=[5,4, 9]\n",
+    "\n",
+    "print(len(t_float), len(l_int), sep=' // ')\n",
+    "print(max(t_float), max(l_int), sep=' // ')\n",
+    "print(min(t_float), min(l_int), sep=' // ')\n",
+    "print(sum(t_float), sum(l_int), sep=' // ')\n",
+    "print(sorted(t_float), sorted(l_int), sep=' // ')\n",
+    "\n",
+    "print(t_float, l_int) # sorted함수가 원본 튜플이나 리스트를 변경하지는 않는다\n",
     "\n",
     "\n"
    ]
